--- a/HHSCP/Fronts/index.html
+++ b/HHSCP/Fronts/index.html
@@ -16,6 +16,8 @@
             <li><a href="sci_Epigenomics_46scatter_plot_3d.html">Epigenomics_46</a></li>
             <li><a href="sci_Sipht_60scatter_plot_3d.html">Sipht_60</a></li>
             <li><a href="sci_Inspiral_30scatter_plot_3d.html">Inspiral_30</a></li>
+            <li><a href="sci_Inspiral_100scatter_plot_3d.html">Inspiral_100</a></li>
+            <li><a href="sci_Sipht_100scatter_plot_3d.html">Sipht_100</a></li>
         </ul>
     </body>
 </html>
